syntax = "proto3";

package merchantBasic;

//generate pb.go file
//protoc --go_out=plugins=grpc:. ./proto/*.proto
option go_package = "./proto;proto";
option php_namespace = "Omy\\Crius\\MerchantBasicServer";

message MemberBehavior {
  string id = 1;
  string member_id = 2;
  string behavior = 3;
  string staff_id = 4;
  string branch_id = 5;
  int32 created_at = 6;
}

message MemberBehaviors {
  repeated MemberBehavior memberBehaviors = 1;
  int32 total = 2;
}

message CreateMemberBehaviorRequest {
  string behavior = 1;
  string member_id = 2;
  string branch_id = 3;
}

message GetMemberBehaviorsRequest {
  string member_id = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message GetMemberBehaviorsResponse {
  int32 error_code = 1;
  string error_message = 2;
  MemberBehaviors data = 3;
}
